[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/crafting/SelectedItemDetails.gd" type="Script" id=1]
[ext_resource path="res://assets/named/item_stone.png" type="Texture" id=2]

[node name="SelectedItemDetails" type="VBoxContainer"]
margin_right = 202.0
margin_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 202.0
margin_bottom = 30.0
custom_constants/margin_bottom = 16

[node name="ItemNameLabel" type="Label" parent="MarginContainer"]
margin_right = 202.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Item name"
align = 1

[node name="ItemIcon" type="TextureRect" parent="."]
margin_top = 34.0
margin_right = 202.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 64 )
texture = ExtResource( 2 )
stretch_mode = 6

[node name="IngredientsList" type="GridContainer" parent="."]
margin_top = 102.0
margin_right = 202.0
margin_bottom = 102.0
columns = 4

[node name="Description" type="Label" parent="."]
margin_top = 106.0
margin_right = 202.0
margin_bottom = 137.0
text = "Pretty long descriptions maybe very very long like this"
autowrap = true

[node name="CraftButton" type="Button" parent="."]
margin_top = 141.0
margin_right = 202.0
margin_bottom = 161.0
text = "craft"

[connection signal="button_up" from="CraftButton" to="." method="_on_CraftButton_button_up"]
